UF-18129 - Bump dept44 to 8.0.0
Bumps dept44 to 8.0.0 and adjusts where needed.