@@ -1,32 +1,38 @@
 package se.sundsvall.templating.api.domain.filter.expression;
 
-import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.databind.DeserializationContext;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
-import java.io.IOException;
+import java.util.List;
 import se.sundsvall.templating.api.domain.filter.expression.logic.And;
 import se.sundsvall.templating.api.domain.filter.expression.logic.Not;
 import se.sundsvall.templating.api.domain.filter.expression.logic.Or;
 import se.sundsvall.templating.api.domain.filter.expression.value.Eq;
 import se.sundsvall.templating.api.domain.filter.expression.value.In;
-import se.sundsvall.templating.api.domain.filter.util.StreamUtil;
+import tools.jackson.core.JsonParser;
+import tools.jackson.core.JsonToken;
+import tools.jackson.databind.DeserializationContext;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.deser.std.StdDeserializer;
+import tools.jackson.databind.node.ArrayNode;
 
 final class ExpressionParser extends StdDeserializer<Expression> {
 
-	private static final long serialVersionUID = 8409532033753753103L;
-
 	ExpressionParser() {
-		super((Class<?>) null);
+		super(Expression.class);
 	}
 
 	@Override
-	public Expression deserialize(final JsonParser jsonParser, final DeserializationContext ctx)
-		throws IOException {
-		final var root = (JsonNode) jsonParser.getCodec().readTree(jsonParser);
+	public Expression deserialize(final JsonParser jsonParser, final DeserializationContext ctx) {
+		JsonNode root;
+		if (jsonParser.currentToken() == JsonToken.VALUE_STRING) {
+			// The object was serialized as an embedded JSON string — re-parse it
+			var rawJson = jsonParser.getString();
 
-		if (!root.isObject() || StreamUtil.fromIterator(root.fields()).toList().isEmpty()) {
-			return new EmptyExpression();
+			root = ctx.readTree(ctx.createParser(rawJson));
+		} else {
+			root = ctx.readTree(jsonParser);
+		}
+
+		if (!root.isObject() || root.properties().isEmpty()) {
+			return new Empty();
 		}
 
 		return parse(root);
@@ -37,12 +43,12 @@ final class ExpressionParser extends StdDeserializer<Expression> {
 			throw new IllegalStateException("Object node expected");
 		}
 
-		final var children = StreamUtil.fromIterator(node.fields()).toList();
+		final var children = List.copyOf(node.properties());
 		if (children.size() != 1) {
 			throw new IllegalStateException("Node should contain a single entry");
 		}
 
-		final var firstChild = children.get(0);
+		final var firstChild = children.getFirst();
 		final var name = firstChild.getKey();
 		final var value = firstChild.getValue();
 
@@ -50,7 +56,7 @@ final class ExpressionParser extends StdDeserializer<Expression> {
 	}
 
 	Expression parseNode(final String name, final JsonNode node) {
-		return switch (name) {
+		return switch (name.toLowerCase()) {
 			case "and" -> parseAnd(node);
 			case "or" -> parseOr(node);
 			case "not" -> parseNot(node);
@@ -61,19 +67,19 @@ final class ExpressionParser extends StdDeserializer<Expression> {
 	}
 
 	And parseAnd(final JsonNode node) {
-		if (!node.isArray()) {
-			throw new IllegalStateException("\"and\" node is not an array");
+		if (node instanceof ArrayNode arrayNode) {
+			return new And(arrayNode.elements().stream().map(this::parse).toList());
 		}
 
-		return new And(StreamUtil.fromIterator(node.elements()).map(this::parse).toList());
+		throw new IllegalStateException("\"and\" node is not an array");
 	}
 
 	Or parseOr(final JsonNode node) {
-		if (!node.isArray()) {
-			throw new IllegalStateException("\"or\" node is not an array");
+		if (node instanceof ArrayNode arrayNode) {
+			return new Or(arrayNode.elements().stream().map(this::parse).toList());
 		}
 
-		return new Or(StreamUtil.fromIterator(node.elements()).map(this::parse).toList());
+		throw new IllegalStateException("\"or\" node is not an array");
 	}
 
 	Not parseNot(final JsonNode node) {
@@ -81,25 +87,27 @@ final class ExpressionParser extends StdDeserializer<Expression> {
 	}
 
 	Eq parseEq(final JsonNode node) {
-		if (!node.fields().hasNext()) {
+		if (node.properties().isEmpty()) {
 			throw new IllegalStateException("\"eq\" node is empty");
 		}
 
-		final var content = node.fields().next();
+		final var content = List.copyOf(node.properties()).getFirst();
 		final var key = content.getKey();
-		final var value = content.getValue().asText();
+		final var value = content.getValue().asString();
 
 		return new Eq(key, value);
 	}
 
 	In parseIn(final JsonNode node) {
-		if (!node.fields().hasNext()) {
+		if (node.properties().isEmpty()) {
 			throw new IllegalStateException("\"in\" node is empty");
 		}
 
-		final var content = node.fields().next();
+		final var content = List.copyOf(node.properties()).getFirst();
 		final var key = content.getKey();
-		final var values = StreamUtil.fromIterator(content.getValue().elements()).map(JsonNode::asText).toList();
+		final var values = content.getValue().values().stream()
+			.map(JsonNode::asString)
+			.toList();
 
 		return new In(key, values);
 	}
